.tmux.conf: add some popup settings

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -82,6 +82,11 @@ bind / join-pane -t:-
 # save-buffer to file
 bind > command-prompt "save-buffer %1"
 
+# popup
+bind Space popup -xC -yC -w85% -h85% -E 'tmux a -t popup || tmux new -s popup'
+bind t popup -xC -yC -w85% -h85% -d '#{pane_current_path}' -E 'tig'
+bind T clock-mode
+
 # Vi keys in copy mode
 setw -g mode-keys vi
 
