--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -8,7 +8,7 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # use 256 colors
-set -g default-terminal screen-256color
+set -g default-terminal tmux-256color
 set -g terminal-overrides ",xterm-256color:Tc"
 
 # use mouse
@@ -102,6 +102,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @yank_with_mouse 'on'
+if-shell '[ -n "$WSL_DISTRO_NAME" ] && command -v powershell.exe >/dev/null 2>&1' {
+    set -g @override_copy_command \
+    'customclip(){ local STDIN=$(cat -); powershell.exe -command "Set-Clipboard" -Value "$STDIN"; }; customclip'
+}
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'laktak/extrakto'
 
