--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -19,13 +19,13 @@ set -g status-interval 1
 set -g monitor-activity on
 
 # status line
-set -g status-style fg=colour253,bg=colour238
-set -g status-left " #S #[bg=colour246] P:#P #[default] "
-set -g status-left-length 30
-set -g status-left-style fg=black,bg=colour249
-set -g status-right " %Y/%m/%d(%a) %H:%M #[bg=colour249] #h"
-set -g status-right-length 40
-set -g status-right-style fg=black,bg=colour246
+#set -g status-style fg=colour253,bg=colour238
+#set -g status-left " #S #[bg=colour246] P:#P #[default] "
+#set -g status-left-length 30
+#set -g status-left-style fg=black,bg=colour249
+#set -g status-right " %Y/%m/%d(%a) %H:%M #[bg=colour249] #h"
+#set -g status-right-length 40
+#set -g status-right-style fg=black,bg=colour246
 
 # permit renumber window
 set -g renumber-windows on
@@ -108,6 +108,19 @@ if-shell '[ -n "$WSL_DISTRO_NAME" ] && command -v powershell.exe >/dev/null 2>&1
 }
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'laktak/extrakto'
+set -g @plugin 'o0th/tmux-nova'
+set -g @nova-nerdfonts true
+set -g @nova-nerdfonts-left 
+set -g @nova-nerdfonts-right 
+set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
+set -g @nova-segment-mode-colors "#50fa7b #282a36"
+set -g @nova-segment-whoami "#(whoami)@#h"
+set -g @nova-segment-whoami-colors "#50fa7b #282a36"
+set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+set -g @nova-rows 0
+set -g @nova-segments-0-left "mode"
+set -g @nova-segments-0-right "whoami"
+#set -g @plugin 'nordtheme/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
