--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -7,13 +7,6 @@
     command = "bsdtar"
     args = ["-xf", "-", "-O", "bw"]
 
-[".local/share/fzf"]
-    type = "archive"
-    url = "https://github.com/junegunn/fzf/archive/master.tar.gz"
-    exact = true
-    stripComponents = 1
-    refreshPeriod = "168h"
-
 [".local/bin/rg"]
     type = "file"
     url = "https://github.com/BurntSushi/ripgrep/releases/download/{{ (gitHubLatestRelease "BurntSushi/ripgrep").TagName }}/ripgrep-{{ (gitHubLatestRelease "BurntSushi/ripgrep").TagName }}-x86_64-unknown-linux-musl.tar.gz"
@@ -23,11 +16,24 @@
     command = "tar"
     args = ["--extract", "--file", "/dev/stdin", "--gzip", "--to-stdout", "ripgrep-{{ (gitHubLatestRelease "BurntSushi/ripgrep").TagName }}-x86_64-unknown-linux-musl/rg"]
 
+[".local/share/fzf"]
+    type = "archive"
+    url = "https://github.com/junegunn/fzf/archive/master.tar.gz"
+    exact = true
+    stripComponents = 1
+    refreshPeriod = "168h"
+
 {{ if eq .chezmoi.os "linux" }}
 {{   if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
 # WSL
+[".local/bin/wsl2-ssh-agent"]
+    type = "file"
+    url = "https://github.com/mame/wsl2-ssh-agent/releases/latest/download/wsl2-ssh-agent"
+    executable = true
+    refreshPeriod = "168h"
+
 {{   else }}
-# Linux only
+# Linux
 [".tmux/plugins/tpm"]
     type = "archive"
     url = "https://github.com/tmux-plugins/tpm/archive/master.tar.gz"
