--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -108,21 +108,11 @@ if-shell '[ -n "$WSL_DISTRO_NAME" ] && command -v powershell.exe >/dev/null 2>&1
 }
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'laktak/extrakto'
-#set -g @plugin 'o0th/tmux-nova'
-#set -g @nova-nerdfonts true
-#set -g @nova-nerdfonts-left 
-#set -g @nova-nerdfonts-right 
-#set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
-#set -g @nova-segment-mode-colors "#50fa7b #282a36"
-#set -g @nova-segment-whoami "#(whoami)@#h"
-#set -g @nova-segment-whoami-colors "#50fa7b #282a36"
-#set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
-#set -g @nova-rows 0
-#set -g @nova-segments-0-left "mode"
-#set -g @nova-segments-0-right "whoami"
-#set -g @plugin 'nordtheme/tmux'
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'frappe'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
